# Fast-Project

./: .gitignore  README.md  main.py  pyproject.toml
