[tool.poetry]
name = "fast-project"
version = "0.1.0"
description = ""
authors = ["SkyWreak <suyashwarke1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
